samples/_failures_safe/1761392218_a16c9b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0c6ff903.c: In function ‘main’:
./samples/SAFE/__tmp_0c6ff903.c:161:5: error: expected expression at end of input
  161 |     if (len > 0 && input[len -
      |     ^~
./samples/SAFE/__tmp_0c6ff903.c:161:5: error: expected declaration or statement at end of input
